nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnet-cidr": {
            "type": "string",
            "metadata": {
                "description": "Enter a vnet cidr value"
            },
            "defaultValue": "10.0.0.0/16"
        }
    },
    "resources":[
 {
    "type": "Microsoft.Network/networkSecurityGroups",
     "apiVersion": "2022-05-01",
     "name": "webnsg",
     "location": "[resourceGroup().location]",
      "tags": {
          "env": "dev",
          "owner": "azure"
              },
      "properties": {
        "securityRules": [
            {

            
            "name": "allowssh",
            "properties": {
                "access": "Allow",
                "priority": 300,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "destinationAddressPrefix": "*"

            }
      
            },

      {
            "name": "allowhttp",
            "properties": {
                "access": "Allow",
                "priority": 310,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "destinationAddressPrefix": "*"
                
            }
          },
            {
               "name": "allowhttps",
                "properties": {
                "access": "Allow",
                "priority": 320,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "destinationAddressPrefix": "*"

            } 
    
            }
      
       
        ]
        
      }
      
 },

   
   {
    "name": "appnsg",
    "type": "Microsoft.Network/networkSecurityGroups",
    "apiVersion": "2020-11-01",
    "location": "[resourceGroup().location]",
    "properties": {
        "securityRules": [
            {
                "name": "allowssh",
                "properties": {
                    "description": "description",
                    "protocol": "Tcp",
                    "sourcePortRange": "[parameters('vnet-cidr')]",
                    "destinationPortRange": "22",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 300,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allowweb",
                "properties": {
                    "description": "description",
                    "protocol": "Tcp",
                    "sourcePortRange": "[parameters('vnet-cidr')]",
                    "destinationPortRange": "8080",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 310,
                    "direction": "Inbound"
                }
                
            }

        ]
    
    }
   }
   
           ]
    }
