vnetwithsqdb.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnet-cidr": {
            "type": "string",
            "metadata": {
                "description": "Enter a vnet cidr value"
            },
            "defaultValue": "10.0.0.0/16"
        },
        "subnet-cidrs": {
            "type": "array",
            "metadata": {
                "description": "Subnet CIDRS"
            },
            "defaultValue": [
                "10.0.0.0/24",
                "10.0.1.0/24",
                "10.0.2.0/24"
            ]
        },
        "subnet-names": {
            "type": "array",
            "metadata": {
                "description": "enter subnet-names"
            },
            "defaultValue": {
                "web",
                "app",
                "db",
            }
        }
    },
    "resources":[
 {
    "type": "Microsoft.Network/networkSecurityGroups",
     "apiVersion": "2022-05-01",
     "name": "webnsg",
     "location": "[resourceGroup().location]",
      "tags": {
          "env": "dev",
          "owner": "azure"
              },
      "properties": {
        "securityRules": [
            {

            
            "name": "allowssh",
            "properties": {
                "access": "Allow",
                "priority": 300,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "destinationAddressPrefix": "*"

            }
      
            },

      {
            "name": "allowhttp",
            "properties": {
                "access": "Allow",
                "priority": 310,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "destinationAddressPrefix": "*"
                
            }
          },
            {
               "name": "allowhttps",
                "properties": {
                "access": "Allow",
                "priority": 320,
                "protocol": "Tcp",
                "direction": "Inbound",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "destinationAddressPrefix": "*"

            } 
    
            }
      
       
        ]
        
      },"dependsOn":[
        "[resourceId('Microsoft.Network/virtualNetworks','myvnet')]"

      ]
      
 },

   
   {
    "name": "appnsg",
    "type": "Microsoft.Network/networkSecurityGroups",
    "apiVersion": "2020-11-01",
    "location": "[resourceGroup().location]",
    "properties": {
        "securityRules": [
            {
                "name": "allowssh",
                "properties": {
                    "description": "description",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "22",
                    "sourceAddressPrefix": "[parameters('vnet-cidr')]",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 300,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allowweb",
                "properties": {
                    "description": "description",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "8080",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "[parameters('vnet-cidr')]",
                    "access": "Allow",
                    "priority": 310,
                    "direction": "Inbound"
                }
                
            }

        ]
    
    },"dependsOn":[
        "[resourceId('Microsoft.Network/virtualNetworks','myvnet')]"
    ]
   },
   {
    "name": "myvnet",
    "type": "Microsoft.Network/virtualNetworks",
    "apiVersion": "2020-11-01",
    "location": "[resourceGroup().location]",
    "tags": {
        "displayName": "virtualNetwork1"
    },
    "properties": {
        "addressSpace": {
            "addressPrefixes": [
                "[parameters('vnet-cidr')]"
            ]
        }
       
    }
   },
   {
        "type": "Microsoft.Network/virtualNetworks/subnets",
        "apiVersion": "2022-05-01",
        "name": "[concat('ntier','/',parameters('subnet-names')[copyIndex()])]",
        "properties": {
            "addressPrefix": "[parameters('subnet-cidrs')[copyIndex()]]"
        },
        "dependsOn": [
            "[resourceId('Microsoft.Network/virtualNetworks','myvnet')]"
        
            
        ]
        "copy": {
            "name": "subnetcopy",
            "count": "[length(parameters('subnet-cidrs'))]",
            "mode": "Serial"
        }

   }
   





   
           ]
    }
